Fix instruction list parargraph margins
Add margins to instruction list paragraphs as these are too close together in the short version if a css reset is present.

--- a/toolkit/scss/_instruction-list.scss
+++ b/toolkit/scss/_instruction-list.scss
@@ -42,6 +42,10 @@
   font-weight: bold;
 }
 
+.instruction-list p {
+  margin-bottom: 10px;
+}
+
 .instruction-list .divider p {
   margin: 0;
 }
